# llm-benchmark

./: .env.example  README.md  benchmark.py  benchmark_results.csv  old_benchmark_results.csv  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-package.yml  release.yml
src/llm_benchmark/: __init__.py  benchmark.py  cli.py  output.py
tests/: test_benchmark.py  test_output.py
