[project]
name = "llm-benchmark"
version = "0.1.2"
description = "A CLI tool for benchmarking LLM inference endpoints (tokens/sec, latency)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Ben Walker", email = "ben@ben-walker.co.uk" }
]
keywords = ["llm", "benchmark", "ollama", "openai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
llm-benchmark = "llm_benchmark.cli:main"

[project.urls]
Homepage = "https://github.com/benwalkerai/LLM-Benchmark"
Repository = "https://github.com/benwalkerai/LLM-Benchmark"
"Bug Tracker" = "https://github.com/benwalkerai/LLM-Benchmark/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
